<resources>
    <string name="CDS">Cannot detect any Primary Machine</string>
    <string name="CDSButtonDiscoveryOff">Connect to Primary Machine</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_about">About</string>
    <string name="action_contact_support">Technical Support</string>
    <string name="action_input_devices">Input Devices</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_manual">User Manual</string>
    <string name="activity_display_label_display_off">DISPLAY OFF</string>
    <string name="app_name">spacedesk</string>
    <string name="app_name_beta">spacedesk</string>
    <string name="app_website">https://www.spacedesk.net</string>
    <string name="app_website_error_browser_missing">Could not open browser: Please check if there is a browser installed on your device.</string>
    <string name="app_website_sonar_pen">https://www.sonarpen.com/</string>
    <string name="discoveryConnectionText">"Connection: "</string>
    <string name="dlgDisconnectNegBtn">Cancel</string>
    <string name="dlgDisconnectPosBtn">OK</string>
    <string name="dlgDisconnectText">Are you sure that you want to return back to the main menu?</string>
    <string name="dlgDisconnectTitle">Leaving display</string>
    <string name="dlgInitialInfoBtn">OK</string>
    <string name="dlgInitialInfoCheckboxText">Do not show this messagebox again</string>
    <string name="dlgInitialInfoPosButton">OK</string>
    <string name="dlgInitialInfoText">"This spacedesk Android App can only connect to a spacedesk Windows DRIVER.

You can download the latest Windows DRIVER from: https://www.spacedesk.net/

Help and Release Notes: https://www.spacedesk.net"</string>
    <string name="dlgInitialInfoTitle">IMPORTANT INFO:</string>
    <string name="dlgProgressCancelNegBtn">Cancel</string>
    <string name="dlgProgressCanceledToastText">aborted</string>
    <string name="dlgTextServerRestrictionPen">"You cannot use the stylus feature with your current Windows-PC spacedesk DRIVER.
Please download the latest spacedesk DRIVER from www.spacedesk.net!"</string>
    <string name="dlgTitleServerRestrictionMain">Unsupported feature on server-side</string>
    <string name="dlg_SoftKBInput_PosBtn">OK</string>
    <string name="dlg_SoftKBInput_Text">"In order to use the software keyboard input feature for your spacedesk server, please install at least spacedesk DRIVER version 0.9.61 for Windows 10!

You can download the latest spacedesk Windows DRIVER from: https://www.spacedesk.net"</string>
    <string name="dlg_SoftKBInput_Title">IMPORTANT INFO:</string>
    <string name="dlg_SoftKBInput_doNotShowAgain">Do not show this messagebox again</string>
    <string name="dlg_add_ip_btn_neg">CANCEL</string>
    <string name="dlg_add_ip_btn_pos">ADD</string>
    <string name="dlg_add_ip_btn_pos_discovery_off">CONNECT</string>
    <string name="dlg_add_ip_empty_list_text">list is empty</string>
    <string name="dlg_add_ip_text">Enter IP address of your primary-PC:</string>
    <string name="dlg_add_ip_text_recent">Recent:</string>
    <string name="dlg_app_ip_dot">.</string>
    <string name="dlg_autoconnect_dot">.</string>
    <string name="hostname">Connect to Primary Machine (Server)</string>
    <string name="hostnameDiscoveryOff">Discovery OFF - for automatic discovery check the settings</string>
    <string name="ipValidationText">IP-Validation in progress…</string>
    <string name="pref_description_auto_connect">Automatically connect to a server on app initialization</string>
    <string name="pref_description_auto_connect_ip">Enter the IP address of the server for automatic connect</string>
    <string name="pref_description_autoreconnect">Automatically reconnect client-device</string>
    <string name="pref_description_custom_res">Typically used for desktop duplication</string>
    <string name="pref_description_discovery">Enable/Disable automatic spacedesk primary machine discovery</string>
    <string name="pref_description_ktm_mouse">Send touch screen input to Windows Primary PC (server)</string>
    <string name="pref_description_native_res">Typically used for desktop extension</string>
    <string name="pref_header_compression">Quality/Performance</string>
    <string name="pref_header_connection">Connection</string>
    <string name="pref_header_extended">Extended</string>
    <string name="pref_header_keyboard">Keyboard</string>
    <string name="pref_header_pen">Pen</string>
    <string name="pref_header_resolution">Resolution</string>
    <string name="pref_header_rotation">Rotation</string>
    <string name="pref_header_touch">Touchscreen</string>
    <string name="pref_image_quality">Image Quality</string>
    <string name="pref_key_auto_connect">key_auto_connect</string>
    <string name="pref_key_auto_connect_ip">key_auto_connect_ip</string>
    <string name="pref_key_auto_reconnect">key_auto_reconnect</string>
    <string name="pref_key_bmp_cnf">key_bmp_cnf</string>
    <string name="pref_key_color_depth">key_color_depth</string>
    <string name="pref_key_compression_quality">key_compression_quality</string>
    <string name="pref_key_con_watcher_poll_period">key_con_watcher_poll_period</string>
    <string name="pref_key_con_watcher_timeout_delta">key_con_watcher_timeout_delta</string>
    <string name="pref_key_custom_resolution">key_custom_resolution</string>
    <string name="pref_key_discovery">key_discovery</string>
    <string name="pref_key_encryption">key_encryption</string>
    <string name="pref_key_encryption_psk_identity">key_encryption_psk_identity</string>
    <string name="pref_key_encryption_psk_key">key_encryption_psk_key</string>
    <string name="pref_key_fps">key_fps</string>
    <string name="pref_key_ktm_mouse">key_ktm_mouse</string>
    <string name="pref_key_ktm_touch_type">key_ktm_touch_type</string>
    <string name="pref_key_native_resolution">key_native_resolution</string>
    <string name="pref_key_resolution_list">key_resolution_list</string>
    <string name="pref_key_timeout_auto_connect">key_timeout_auto_connect</string>
    <string name="pref_key_timeout_reconnect">key_timeout_reconnect</string>
    <string name="pref_resolution_list_btn_neg">CANCEL</string>
    <string name="pref_resolution_list_btn_pos">APPLY</string>
    <string name="pref_text_extended_con_watcher_polling_period">Set Connect Timeout Polling Period in milliseconds</string>
    <string name="pref_text_extended_con_watcher_timeout">Set Connect Timeout in milliseconds</string>
    <string name="pref_text_extended_encryption">Choose encrypted connection type</string>
    <string name="pref_text_extended_encryption_client_identity">Set the Client Identity for encrypted connection</string>
    <string name="pref_text_extended_encryption_key">Set the Key for encrypted connection as HEX</string>
    <string name="pref_text_extended_timeout_auto_connect">Set Automatic Connect Timeout in milliseconds</string>
    <string name="pref_text_extended_timeout_reconnect">Set Auto-reconnect Timeout in milliseconds</string>
    <string name="pref_title_auto_connect">Automatic Connect</string>
    <string name="pref_title_auto_connect_ip">Automatic Connect to IP-Address:</string>
    <string name="pref_title_autoreconnect">Auto-reconnect</string>
    <string name="pref_title_bmp_conf">Rendering Color Depth</string>
    <string name="pref_title_color_depth">Encoding Color Depth</string>
    <string name="pref_title_custom_res">Use custom resolution</string>
    <string name="pref_title_custom_res_choose">Choose Custom Resolution</string>
    <string name="pref_title_discovery">Automatic Server Discovery</string>
    <string name="pref_title_extended_con_watcher_polling_period">Connection Timeout Polling Period</string>
    <string name="pref_title_extended_con_watcher_timeout">Connection Timeout</string>
    <string name="pref_title_extended_encryption">Connection Encryption</string>
    <string name="pref_title_extended_encryption_client_identity">Connection Encryption Client Identity</string>
    <string name="pref_title_extended_encryption_key">Connection Encryption Key</string>
    <string name="pref_title_extended_timeout_auto_connect">Automatic Connect Timeout</string>
    <string name="pref_title_extended_timeout_reconnect">Auto-reconnect Timeout</string>
    <string name="pref_title_fps">Custom FPS Rate</string>
    <string name="pref_title_ktm_mouse">Enable Touch Screen Control</string>
    <string name="pref_title_native_res">Use native android device resolution</string>
    <string name="pref_title_touch_type">Touch Input Type</string>
    <string name="sonarPenPrefCalibrate">Calibrate SonarPen</string>
    <string name="sonarPenPrefCancel">Cancel</string>
    <string name="sonarPenPrefEnable">Enable SonarPen</string>
    <string name="sonarPenPrefMainText">The spacedesk App supports the SonarPen stylus. See the options below to enable/disable it, visit the SonarPen-Website or calibrate the SonarPen.</string>
    <string name="sonarPenPrefPalmRejectionEnable">Enable Palm Rejection</string>
    <string name="sonarPenPrefWebsite">SonarPen Website</string>
</resources>