<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:scrollbars="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:overScrollMode="ifContentScrolls"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="?dialogPreferredPadding"
        android:paddingTop="18.0dip"
        android:paddingRight="?dialogPreferredPadding"
        android:paddingBottom="18.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center_horizontal"
            android:id="@id/tvMainSonarPen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sonarPenPrefMainText" />
        <Button
            android:layout_gravity="center_horizontal"
            android:id="@id/btnEnableDisableSonarPen"
            android:layout_width="250.0dip"
            android:layout_height="50.0dip"
            android:layout_marginTop="45.0dip"
            android:text="@string/sonarPenPrefEnable" />
        <Button
            android:layout_gravity="center_horizontal"
            android:id="@id/btnVisitWebsiteSonarPen"
            android:layout_width="250.0dip"
            android:layout_height="50.0dip"
            android:layout_marginTop="10.0dip"
            android:text="@string/sonarPenPrefWebsite" />
        <Button
            android:layout_gravity="center_horizontal"
            android:id="@id/btnCalibrateSonarPen"
            android:layout_width="250.0dip"
            android:layout_height="50.0dip"
            android:layout_marginTop="10.0dip"
            android:text="@string/sonarPenPrefCalibrate" />
        <Button
            android:layout_gravity="center_horizontal"
            android:id="@id/btnPalmRejectionSonarPen"
            android:layout_width="250.0dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/sonarPenPrefPalmRejectionEnable" />
        <Button
            android:layout_gravity="center_horizontal"
            android:id="@id/btnCancelSonarPen"
            android:layout_width="250.0dip"
            android:layout_height="50.0dip"
            android:layout_marginTop="10.0dip"
            android:text="@string/sonarPenPrefCancel" />
    </LinearLayout>
</ScrollView>